updated code retrive from the feature/48
